--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               <div class="todo-wrap">
                 <div class="roster-header-note">
                     <input type="checkbox" class="roster-header-btn" id="active-btn">
-                    <input class="roster-header-question" placeholder="What needs to be done?" id="taskInput" pattern="^[a-zA-Z]+$">
+                    <input class="roster-header-question" placeholder="What needs to be done?" id="taskInput">
                 </div>
-                <!-- <div class="roster-list-start(jquety)"> -->
+                <!-- <div class="roster-list-start(jquery)"> -->
                   <div class="tasks"></div>
                                <!-- <div class="roster-list-end"> -->
 
@@ -41,6 +41,11 @@
             </div>
         </div>
  </section>
+
+ <!-- <audio class="player" controls="">
+  <source src="audio/sound.mp3" type="audio/mp3" >
+</audio> -->
+
     <!-- to-do-list - end -->
   <script type="text/javascript" src="http://ajax.microsoft.com/ajax/jQuery/jquery-1.11.0.min.js"></script>
     <script src="jquery/library.js"></script>
